// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SDK ↔ CLI Coverage Audit > should match the snapshot of CLI-imported SDK functions 1`] = `
[
  "apiKeysControllerRefresh",
  "bookingAttendeesController20240813AddAttendee",
  "bookingAttendeesController20240813GetBookingAttendee",
  "bookingAttendeesController20240813GetBookingAttendees",
  "bookingGuestsController20240813AddGuests",
  "bookingLocationController20240813UpdateBookingLocation",
  "bookingsController20240813CancelBooking",
  "bookingsController20240813ConfirmBooking",
  "bookingsController20240813CreateBooking",
  "bookingsController20240813DeclineBooking",
  "bookingsController20240813GetBooking",
  "bookingsController20240813GetBookingBySeatUid",
  "bookingsController20240813GetBookingRecordings",
  "bookingsController20240813GetBookingReferences",
  "bookingsController20240813GetBookingTranscripts",
  "bookingsController20240813GetBookings",
  "bookingsController20240813GetCalendarLinks",
  "bookingsController20240813GetVideoSessions",
  "bookingsController20240813MarkNoShow",
  "bookingsController20240813ReassignBooking",
  "bookingsController20240813ReassignBookingToUser",
  "bookingsController20240813RescheduleBooking",
  "calendarsControllerCheck",
  "calendarsControllerCheckIcsFeed",
  "calendarsControllerCreateIcsFeed",
  "calendarsControllerDeleteCalendarCredentials",
  "calendarsControllerGetBusyTimes",
  "calendarsControllerGetCalendars",
  "calendarsControllerRedirect",
  "calendarsControllerSave",
  "calendarsControllerSyncCredentials",
  "client",
  "conferencingControllerDefault",
  "conferencingControllerDisconnect",
  "conferencingControllerGetDefault",
  "conferencingControllerListInstalledConferencingApps",
  "destinationCalendarsControllerUpdateDestinationCalendars",
  "eventTypeWebhooksControllerCreateEventTypeWebhook",
  "eventTypeWebhooksControllerDeleteAllEventTypeWebhooks",
  "eventTypeWebhooksControllerDeleteEventTypeWebhook",
  "eventTypeWebhooksControllerGetEventTypeWebhook",
  "eventTypeWebhooksControllerGetEventTypeWebhooks",
  "eventTypeWebhooksControllerUpdateEventTypeWebhook",
  "eventTypesController20240614CreateEventType",
  "eventTypesController20240614DeleteEventType",
  "eventTypesController20240614GetEventTypeById",
  "eventTypesController20240614GetEventTypes",
  "eventTypesController20240614UpdateEventType",
  "eventTypesPrivateLinksControllerCreatePrivateLink",
  "eventTypesPrivateLinksControllerDeletePrivateLink",
  "eventTypesPrivateLinksControllerGetPrivateLinks",
  "eventTypesPrivateLinksControllerUpdatePrivateLink",
  "meControllerGetMe",
  "meControllerUpdateMe",
  "oAuth2ControllerGetClient",
  "oAuth2ControllerToken",
  "orgTeamsVerifiedResourcesControllerGetVerifiedEmailById",
  "orgTeamsVerifiedResourcesControllerGetVerifiedEmails",
  "orgTeamsVerifiedResourcesControllerGetVerifiedPhoneById",
  "orgTeamsVerifiedResourcesControllerGetVerifiedPhoneNumbers",
  "organizationTeamWorkflowsControllerCreateEventTypeWorkflow",
  "organizationTeamWorkflowsControllerCreateFormWorkflow",
  "organizationTeamWorkflowsControllerDeleteRoutingFormWorkflow",
  "organizationTeamWorkflowsControllerDeleteWorkflow",
  "organizationTeamWorkflowsControllerGetRoutingFormWorkflowById",
  "organizationTeamWorkflowsControllerGetRoutingFormWorkflows",
  "organizationTeamWorkflowsControllerGetWorkflowById",
  "organizationTeamWorkflowsControllerGetWorkflows",
  "organizationTeamWorkflowsControllerUpdateRoutingFormWorkflow",
  "organizationTeamWorkflowsControllerUpdateWorkflow",
  "organizationsAttributesControllerCreateOrganizationAttribute",
  "organizationsAttributesControllerDeleteOrganizationAttribute",
  "organizationsAttributesControllerGetOrganizationAttribute",
  "organizationsAttributesControllerGetOrganizationAttributes",
  "organizationsAttributesControllerUpdateOrganizationAttribute",
  "organizationsAttributesOptionsControllerAssignOrganizationAttributeOptionToUser",
  "organizationsAttributesOptionsControllerCreateOrganizationAttributeOption",
  "organizationsAttributesOptionsControllerDeleteOrganizationAttributeOption",
  "organizationsAttributesOptionsControllerGetOrganizationAttributeAssignedOptions",
  "organizationsAttributesOptionsControllerGetOrganizationAttributeAssignedOptionsBySlug",
  "organizationsAttributesOptionsControllerGetOrganizationAttributeOptions",
  "organizationsAttributesOptionsControllerGetOrganizationAttributeOptionsForUser",
  "organizationsAttributesOptionsControllerUnassignOrganizationAttributeOptionFromUser",
  "organizationsAttributesOptionsControllerUpdateOrganizationAttributeOption",
  "organizationsBookingsControllerGetAllOrgTeamBookings",
  "organizationsConferencingControllerConnectTeamApp",
  "organizationsConferencingControllerDisconnectTeamApp",
  "organizationsConferencingControllerGetTeamOAuthUrl",
  "organizationsConferencingControllerListTeamConferencingApps",
  "organizationsConferencingControllerSetTeamDefaultApp",
  "organizationsDelegationCredentialControllerCreateDelegationCredential",
  "organizationsDelegationCredentialControllerUpdateDelegationCredential",
  "organizationsEventTypesControllerGetTeamsEventTypes",
  "organizationsEventTypesPrivateLinksControllerCreatePrivateLink",
  "organizationsEventTypesPrivateLinksControllerDeletePrivateLink",
  "organizationsEventTypesPrivateLinksControllerGetPrivateLinks",
  "organizationsEventTypesPrivateLinksControllerUpdatePrivateLink",
  "organizationsMembershipsControllerCreateMembership",
  "organizationsMembershipsControllerDeleteMembership",
  "organizationsMembershipsControllerGetAllMemberships",
  "organizationsMembershipsControllerGetOrgMembership",
  "organizationsMembershipsControllerUpdateMembership",
  "organizationsOrganizationsControllerCreateOrganization",
  "organizationsOrganizationsControllerDeleteOrganization",
  "organizationsOrganizationsControllerGetOrganization",
  "organizationsOrganizationsControllerGetOrganizations",
  "organizationsOrganizationsControllerUpdateOrganization",
  "organizationsRolesControllerCreateRole",
  "organizationsRolesControllerDeleteRole",
  "organizationsRolesControllerGetAllRoles",
  "organizationsRolesControllerGetRole",
  "organizationsRolesControllerUpdateRole",
  "organizationsRolesPermissionsControllerAddPermissions",
  "organizationsRolesPermissionsControllerListPermissions",
  "organizationsRolesPermissionsControllerRemovePermissions",
  "organizationsRolesPermissionsControllerSetPermissions",
  "organizationsRoutingFormsControllerGetOrganizationRoutingForms",
  "organizationsRoutingFormsResponsesControllerCreateRoutingFormResponse",
  "organizationsRoutingFormsResponsesControllerGetRoutingFormResponses",
  "organizationsRoutingFormsResponsesControllerUpdateRoutingFormResponse",
  "organizationsSchedulesControllerCreateUserSchedule",
  "organizationsSchedulesControllerDeleteUserSchedule",
  "organizationsSchedulesControllerGetOrganizationSchedules",
  "organizationsSchedulesControllerGetUserSchedule",
  "organizationsSchedulesControllerGetUserSchedules",
  "organizationsSchedulesControllerUpdateUserSchedule",
  "organizationsStripeControllerCheckTeamStripeConnection",
  "organizationsStripeControllerGetTeamStripeConnectUrl",
  "organizationsStripeControllerSave",
  "organizationsTeamsBookingsControllerGetBookingReferences",
  "organizationsTeamsControllerGetMyTeams",
  "organizationsTeamsRolesControllerCreateRole",
  "organizationsTeamsRolesControllerDeleteRole",
  "organizationsTeamsRolesControllerGetAllRoles",
  "organizationsTeamsRolesControllerGetRole",
  "organizationsTeamsRolesControllerUpdateRole",
  "organizationsTeamsRolesPermissionsControllerAddPermissions",
  "organizationsTeamsRolesPermissionsControllerListPermissions",
  "organizationsTeamsRolesPermissionsControllerRemovePermissions",
  "organizationsTeamsRolesPermissionsControllerSetPermissions",
  "organizationsTeamsRoutingFormsControllerGetTeamRoutingForms",
  "organizationsTeamsRoutingFormsResponsesControllerCreateRoutingFormResponse",
  "organizationsTeamsRoutingFormsResponsesControllerGetRoutingFormResponses",
  "organizationsTeamsRoutingFormsResponsesControllerUpdateRoutingFormResponse",
  "organizationsTeamsSchedulesControllerGetTeamSchedules",
  "organizationsTeamsSchedulesControllerGetUserSchedules",
  "organizationsUsersBookingsControllerGetOrganizationUserBookings",
  "organizationsUsersControllerCreateOrganizationUser",
  "organizationsUsersControllerDeleteOrganizationUser",
  "organizationsUsersControllerGetOrganizationsUsers",
  "organizationsUsersControllerUpdateOrganizationUser",
  "organizationsUsersOooControllerCreateOrganizationUserOoo",
  "organizationsUsersOooControllerDeleteOrganizationUserOoo",
  "organizationsUsersOooControllerGetOrganizationUserOoo",
  "organizationsUsersOooControllerGetOrganizationUsersOoo",
  "organizationsUsersOooControllerUpdateOrganizationUserOoo",
  "organizationsWebhooksControllerCreateOrganizationWebhook",
  "organizationsWebhooksControllerDeleteWebhook",
  "organizationsWebhooksControllerGetAllOrganizationWebhooks",
  "organizationsWebhooksControllerGetOrganizationWebhook",
  "organizationsWebhooksControllerUpdateOrgWebhook",
  "routingFormsControllerCalculateSlotsBasedOnRoutingFormResponse",
  "schedulesController20240611CreateSchedule",
  "schedulesController20240611DeleteSchedule",
  "schedulesController20240611GetDefaultSchedule",
  "schedulesController20240611GetSchedule",
  "schedulesController20240611GetSchedules",
  "schedulesController20240611UpdateSchedule",
  "selectedCalendarsControllerAddSelectedCalendar",
  "selectedCalendarsControllerDeleteSelectedCalendar",
  "slotsController20240904DeleteReservedSlot",
  "slotsController20240904GetAvailableSlots",
  "slotsController20240904GetReservedSlot",
  "slotsController20240904ReserveSlot",
  "slotsController20240904UpdateReservedSlot",
  "stripeControllerCheck",
  "stripeControllerRedirect",
  "stripeControllerSave",
  "teamsBookingsControllerGetAllTeamBookings",
  "teamsControllerCreateTeam",
  "teamsControllerDeleteTeam",
  "teamsControllerGetTeam",
  "teamsControllerGetTeams",
  "teamsControllerUpdateTeam",
  "teamsEventTypesControllerCreateTeamEventType",
  "teamsEventTypesControllerDeleteTeamEventType",
  "teamsEventTypesControllerGetTeamEventType",
  "teamsEventTypesControllerGetTeamEventTypes",
  "teamsEventTypesControllerUpdateTeamEventType",
  "teamsEventTypesWebhooksControllerCreateTeamEventTypeWebhook",
  "teamsEventTypesWebhooksControllerDeleteAllTeamEventTypeWebhooks",
  "teamsEventTypesWebhooksControllerDeleteTeamEventTypeWebhook",
  "teamsEventTypesWebhooksControllerGetTeamEventTypeWebhook",
  "teamsEventTypesWebhooksControllerGetTeamEventTypeWebhooks",
  "teamsEventTypesWebhooksControllerUpdateTeamEventTypeWebhook",
  "teamsInviteControllerCreateInvite",
  "teamsMembershipsControllerCreateTeamMembership",
  "teamsMembershipsControllerDeleteTeamMembership",
  "teamsMembershipsControllerGetTeamMembership",
  "teamsMembershipsControllerGetTeamMemberships",
  "teamsMembershipsControllerUpdateTeamMembership",
  "teamsVerifiedResourcesControllerGetVerifiedEmailById",
  "teamsVerifiedResourcesControllerGetVerifiedEmails",
  "teamsVerifiedResourcesControllerGetVerifiedPhoneById",
  "teamsVerifiedResourcesControllerGetVerifiedPhoneNumbers",
  "userVerifiedResourcesControllerGetVerifiedEmailById",
  "userVerifiedResourcesControllerGetVerifiedEmails",
  "userVerifiedResourcesControllerGetVerifiedPhoneById",
  "userVerifiedResourcesControllerGetVerifiedPhoneNumbers",
  "webhooksControllerCreateWebhook",
  "webhooksControllerDeleteWebhook",
  "webhooksControllerGetWebhook",
  "webhooksControllerGetWebhooks",
  "webhooksControllerUpdateWebhook",
]
`;

exports[`SDK ↔ CLI Coverage Audit > should match the snapshot of SDK imports by file 1`] = `
{
  "commands/agenda/command.ts": [
    "bookingsController20240813GetBookings",
  ],
  "commands/api-keys/command.ts": [
    "apiKeysControllerRefresh",
  ],
  "commands/bookings/command.ts": [
    "bookingAttendeesController20240813AddAttendee",
    "bookingAttendeesController20240813GetBookingAttendee",
    "bookingAttendeesController20240813GetBookingAttendees",
    "bookingGuestsController20240813AddGuests",
    "bookingLocationController20240813UpdateBookingLocation",
    "bookingsController20240813CancelBooking",
    "bookingsController20240813ConfirmBooking",
    "bookingsController20240813CreateBooking",
    "bookingsController20240813DeclineBooking",
    "bookingsController20240813GetBooking",
    "bookingsController20240813GetBookingBySeatUid",
    "bookingsController20240813GetBookingRecordings",
    "bookingsController20240813GetBookingReferences",
    "bookingsController20240813GetBookingTranscripts",
    "bookingsController20240813GetBookings",
    "bookingsController20240813GetCalendarLinks",
    "bookingsController20240813GetVideoSessions",
    "bookingsController20240813MarkNoShow",
    "bookingsController20240813ReassignBooking",
    "bookingsController20240813ReassignBookingToUser",
    "bookingsController20240813RescheduleBooking",
  ],
  "commands/calendars/command.ts": [
    "calendarsControllerCheck",
    "calendarsControllerCheckIcsFeed",
    "calendarsControllerCreateIcsFeed",
    "calendarsControllerDeleteCalendarCredentials",
    "calendarsControllerGetBusyTimes",
    "calendarsControllerGetCalendars",
    "calendarsControllerRedirect",
    "calendarsControllerSave",
    "calendarsControllerSyncCredentials",
  ],
  "commands/conferencing/command.ts": [
    "conferencingControllerDefault",
    "conferencingControllerDisconnect",
    "conferencingControllerGetDefault",
    "conferencingControllerListInstalledConferencingApps",
  ],
  "commands/delegation-credentials/command.ts": [
    "organizationsDelegationCredentialControllerCreateDelegationCredential",
    "organizationsDelegationCredentialControllerUpdateDelegationCredential",
  ],
  "commands/destination-calendars/command.ts": [
    "calendarsControllerGetCalendars",
    "destinationCalendarsControllerUpdateDestinationCalendars",
  ],
  "commands/event-type-webhooks/command.ts": [
    "eventTypeWebhooksControllerCreateEventTypeWebhook",
    "eventTypeWebhooksControllerDeleteAllEventTypeWebhooks",
    "eventTypeWebhooksControllerDeleteEventTypeWebhook",
    "eventTypeWebhooksControllerGetEventTypeWebhook",
    "eventTypeWebhooksControllerGetEventTypeWebhooks",
    "eventTypeWebhooksControllerUpdateEventTypeWebhook",
  ],
  "commands/event-types/command.ts": [
    "eventTypesController20240614CreateEventType",
    "eventTypesController20240614DeleteEventType",
    "eventTypesController20240614GetEventTypeById",
    "eventTypesController20240614GetEventTypes",
    "eventTypesController20240614UpdateEventType",
  ],
  "commands/managed-orgs/command.ts": [
    "organizationsOrganizationsControllerCreateOrganization",
    "organizationsOrganizationsControllerDeleteOrganization",
    "organizationsOrganizationsControllerGetOrganization",
    "organizationsOrganizationsControllerGetOrganizations",
    "organizationsOrganizationsControllerUpdateOrganization",
  ],
  "commands/me/command.ts": [
    "meControllerGetMe",
    "meControllerUpdateMe",
  ],
  "commands/oauth/command.ts": [
    "oAuth2ControllerGetClient",
    "oAuth2ControllerToken",
  ],
  "commands/ooo/command.ts": [
    "meControllerGetMe",
    "organizationsUsersOooControllerCreateOrganizationUserOoo",
    "organizationsUsersOooControllerDeleteOrganizationUserOoo",
    "organizationsUsersOooControllerGetOrganizationUserOoo",
    "organizationsUsersOooControllerUpdateOrganizationUserOoo",
  ],
  "commands/org-attributes/command.ts": [
    "organizationsAttributesControllerCreateOrganizationAttribute",
    "organizationsAttributesControllerDeleteOrganizationAttribute",
    "organizationsAttributesControllerGetOrganizationAttribute",
    "organizationsAttributesControllerGetOrganizationAttributes",
    "organizationsAttributesControllerUpdateOrganizationAttribute",
    "organizationsAttributesOptionsControllerAssignOrganizationAttributeOptionToUser",
    "organizationsAttributesOptionsControllerCreateOrganizationAttributeOption",
    "organizationsAttributesOptionsControllerDeleteOrganizationAttributeOption",
    "organizationsAttributesOptionsControllerGetOrganizationAttributeAssignedOptions",
    "organizationsAttributesOptionsControllerGetOrganizationAttributeAssignedOptionsBySlug",
    "organizationsAttributesOptionsControllerGetOrganizationAttributeOptions",
    "organizationsAttributesOptionsControllerGetOrganizationAttributeOptionsForUser",
    "organizationsAttributesOptionsControllerUnassignOrganizationAttributeOptionFromUser",
    "organizationsAttributesOptionsControllerUpdateOrganizationAttributeOption",
  ],
  "commands/org-bookings/command.ts": [
    "organizationsBookingsControllerGetAllOrgTeamBookings",
    "organizationsUsersBookingsControllerGetOrganizationUserBookings",
  ],
  "commands/org-memberships/command.ts": [
    "organizationsMembershipsControllerCreateMembership",
    "organizationsMembershipsControllerDeleteMembership",
    "organizationsMembershipsControllerGetAllMemberships",
    "organizationsMembershipsControllerGetOrgMembership",
    "organizationsMembershipsControllerUpdateMembership",
  ],
  "commands/org-overview/command.ts": [
    "organizationsSchedulesControllerGetOrganizationSchedules",
    "organizationsUsersOooControllerGetOrganizationUsersOoo",
  ],
  "commands/org-roles/command.ts": [
    "organizationsRolesControllerCreateRole",
    "organizationsRolesControllerDeleteRole",
    "organizationsRolesControllerGetAllRoles",
    "organizationsRolesControllerGetRole",
    "organizationsRolesControllerUpdateRole",
    "organizationsRolesPermissionsControllerAddPermissions",
    "organizationsRolesPermissionsControllerListPermissions",
    "organizationsRolesPermissionsControllerRemovePermissions",
    "organizationsRolesPermissionsControllerSetPermissions",
  ],
  "commands/org-routing-forms/command.ts": [
    "organizationsRoutingFormsControllerGetOrganizationRoutingForms",
    "organizationsRoutingFormsResponsesControllerCreateRoutingFormResponse",
    "organizationsRoutingFormsResponsesControllerGetRoutingFormResponses",
    "organizationsRoutingFormsResponsesControllerUpdateRoutingFormResponse",
  ],
  "commands/org-team-verified-resources/command.ts": [
    "orgTeamsVerifiedResourcesControllerGetVerifiedEmailById",
    "orgTeamsVerifiedResourcesControllerGetVerifiedEmails",
    "orgTeamsVerifiedResourcesControllerGetVerifiedPhoneById",
    "orgTeamsVerifiedResourcesControllerGetVerifiedPhoneNumbers",
  ],
  "commands/org-user-ooo/command.ts": [
    "organizationsUsersOooControllerCreateOrganizationUserOoo",
    "organizationsUsersOooControllerDeleteOrganizationUserOoo",
    "organizationsUsersOooControllerGetOrganizationUserOoo",
    "organizationsUsersOooControllerGetOrganizationUsersOoo",
    "organizationsUsersOooControllerUpdateOrganizationUserOoo",
  ],
  "commands/org-user-schedules/command.ts": [
    "organizationsSchedulesControllerCreateUserSchedule",
    "organizationsSchedulesControllerDeleteUserSchedule",
    "organizationsSchedulesControllerGetUserSchedule",
    "organizationsSchedulesControllerGetUserSchedules",
    "organizationsSchedulesControllerUpdateUserSchedule",
  ],
  "commands/org-users/command.ts": [
    "organizationsUsersControllerCreateOrganizationUser",
    "organizationsUsersControllerDeleteOrganizationUser",
    "organizationsUsersControllerGetOrganizationsUsers",
    "organizationsUsersControllerUpdateOrganizationUser",
  ],
  "commands/org-webhooks/command.ts": [
    "organizationsWebhooksControllerCreateOrganizationWebhook",
    "organizationsWebhooksControllerDeleteWebhook",
    "organizationsWebhooksControllerGetAllOrganizationWebhooks",
    "organizationsWebhooksControllerGetOrganizationWebhook",
    "organizationsWebhooksControllerUpdateOrgWebhook",
  ],
  "commands/private-links/command.ts": [
    "eventTypesPrivateLinksControllerCreatePrivateLink",
    "eventTypesPrivateLinksControllerDeletePrivateLink",
    "eventTypesPrivateLinksControllerGetPrivateLinks",
    "eventTypesPrivateLinksControllerUpdatePrivateLink",
  ],
  "commands/routing-forms/command.ts": [
    "routingFormsControllerCalculateSlotsBasedOnRoutingFormResponse",
  ],
  "commands/schedules/command.ts": [
    "schedulesController20240611CreateSchedule",
    "schedulesController20240611DeleteSchedule",
    "schedulesController20240611GetDefaultSchedule",
    "schedulesController20240611GetSchedule",
    "schedulesController20240611GetSchedules",
    "schedulesController20240611UpdateSchedule",
  ],
  "commands/selected-calendars/command.ts": [
    "selectedCalendarsControllerAddSelectedCalendar",
    "selectedCalendarsControllerDeleteSelectedCalendar",
  ],
  "commands/slots/command.ts": [
    "slotsController20240904DeleteReservedSlot",
    "slotsController20240904GetAvailableSlots",
    "slotsController20240904GetReservedSlot",
    "slotsController20240904ReserveSlot",
    "slotsController20240904UpdateReservedSlot",
  ],
  "commands/stripe/command.ts": [
    "stripeControllerCheck",
    "stripeControllerRedirect",
    "stripeControllerSave",
  ],
  "commands/team-conferencing/command.ts": [
    "organizationsConferencingControllerConnectTeamApp",
    "organizationsConferencingControllerDisconnectTeamApp",
    "organizationsConferencingControllerGetTeamOAuthUrl",
    "organizationsConferencingControllerListTeamConferencingApps",
    "organizationsConferencingControllerSetTeamDefaultApp",
  ],
  "commands/team-event-type-private-links/command.ts": [
    "organizationsEventTypesPrivateLinksControllerCreatePrivateLink",
    "organizationsEventTypesPrivateLinksControllerDeletePrivateLink",
    "organizationsEventTypesPrivateLinksControllerGetPrivateLinks",
    "organizationsEventTypesPrivateLinksControllerUpdatePrivateLink",
  ],
  "commands/team-event-type-webhooks/command.ts": [
    "teamsEventTypesWebhooksControllerCreateTeamEventTypeWebhook",
    "teamsEventTypesWebhooksControllerDeleteAllTeamEventTypeWebhooks",
    "teamsEventTypesWebhooksControllerDeleteTeamEventTypeWebhook",
    "teamsEventTypesWebhooksControllerGetTeamEventTypeWebhook",
    "teamsEventTypesWebhooksControllerGetTeamEventTypeWebhooks",
    "teamsEventTypesWebhooksControllerUpdateTeamEventTypeWebhook",
  ],
  "commands/team-event-types/command.ts": [
    "teamsEventTypesControllerCreateTeamEventType",
    "teamsEventTypesControllerDeleteTeamEventType",
    "teamsEventTypesControllerGetTeamEventType",
    "teamsEventTypesControllerGetTeamEventTypes",
    "teamsEventTypesControllerUpdateTeamEventType",
  ],
  "commands/team-roles/command.ts": [
    "organizationsTeamsRolesControllerCreateRole",
    "organizationsTeamsRolesControllerDeleteRole",
    "organizationsTeamsRolesControllerGetAllRoles",
    "organizationsTeamsRolesControllerGetRole",
    "organizationsTeamsRolesControllerUpdateRole",
    "organizationsTeamsRolesPermissionsControllerAddPermissions",
    "organizationsTeamsRolesPermissionsControllerListPermissions",
    "organizationsTeamsRolesPermissionsControllerRemovePermissions",
    "organizationsTeamsRolesPermissionsControllerSetPermissions",
  ],
  "commands/team-routing-forms/command.ts": [
    "organizationsTeamsRoutingFormsControllerGetTeamRoutingForms",
    "organizationsTeamsRoutingFormsResponsesControllerCreateRoutingFormResponse",
    "organizationsTeamsRoutingFormsResponsesControllerGetRoutingFormResponses",
    "organizationsTeamsRoutingFormsResponsesControllerUpdateRoutingFormResponse",
  ],
  "commands/team-schedules/command.ts": [
    "organizationsTeamsSchedulesControllerGetTeamSchedules",
    "organizationsTeamsSchedulesControllerGetUserSchedules",
  ],
  "commands/team-stripe/command.ts": [
    "organizationsStripeControllerCheckTeamStripeConnection",
    "organizationsStripeControllerGetTeamStripeConnectUrl",
    "organizationsStripeControllerSave",
  ],
  "commands/team-verified-resources/command.ts": [
    "teamsVerifiedResourcesControllerGetVerifiedEmailById",
    "teamsVerifiedResourcesControllerGetVerifiedEmails",
    "teamsVerifiedResourcesControllerGetVerifiedPhoneById",
    "teamsVerifiedResourcesControllerGetVerifiedPhoneNumbers",
  ],
  "commands/team-workflows/command.ts": [
    "organizationTeamWorkflowsControllerCreateEventTypeWorkflow",
    "organizationTeamWorkflowsControllerCreateFormWorkflow",
    "organizationTeamWorkflowsControllerDeleteRoutingFormWorkflow",
    "organizationTeamWorkflowsControllerDeleteWorkflow",
    "organizationTeamWorkflowsControllerGetRoutingFormWorkflowById",
    "organizationTeamWorkflowsControllerGetRoutingFormWorkflows",
    "organizationTeamWorkflowsControllerGetWorkflowById",
    "organizationTeamWorkflowsControllerGetWorkflows",
    "organizationTeamWorkflowsControllerUpdateRoutingFormWorkflow",
    "organizationTeamWorkflowsControllerUpdateWorkflow",
  ],
  "commands/teams/command.ts": [
    "organizationsEventTypesControllerGetTeamsEventTypes",
    "organizationsTeamsBookingsControllerGetBookingReferences",
    "organizationsTeamsControllerGetMyTeams",
    "teamsBookingsControllerGetAllTeamBookings",
    "teamsControllerCreateTeam",
    "teamsControllerDeleteTeam",
    "teamsControllerGetTeam",
    "teamsControllerGetTeams",
    "teamsControllerUpdateTeam",
    "teamsInviteControllerCreateInvite",
    "teamsMembershipsControllerCreateTeamMembership",
    "teamsMembershipsControllerDeleteTeamMembership",
    "teamsMembershipsControllerGetTeamMembership",
    "teamsMembershipsControllerGetTeamMemberships",
    "teamsMembershipsControllerUpdateTeamMembership",
  ],
  "commands/verified-resources/command.ts": [
    "userVerifiedResourcesControllerGetVerifiedEmailById",
    "userVerifiedResourcesControllerGetVerifiedEmails",
    "userVerifiedResourcesControllerGetVerifiedPhoneById",
    "userVerifiedResourcesControllerGetVerifiedPhoneNumbers",
  ],
  "commands/webhooks/command.ts": [
    "webhooksControllerCreateWebhook",
    "webhooksControllerDeleteWebhook",
    "webhooksControllerGetWebhook",
    "webhooksControllerGetWebhooks",
    "webhooksControllerUpdateWebhook",
  ],
  "shared/auth.ts": [
    "oAuth2ControllerToken",
  ],
  "shared/client.ts": [
    "client",
  ],
}
`;

exports[`SDK ↔ CLI Coverage Audit > should match the snapshot of all SDK endpoint functions 1`] = `
[
  "apiKeysControllerRefresh",
  "bookingAttendeesController20240813AddAttendee",
  "bookingAttendeesController20240813GetBookingAttendee",
  "bookingAttendeesController20240813GetBookingAttendees",
  "bookingGuestsController20240813AddGuests",
  "bookingLocationController20240813UpdateBookingLocation",
  "bookingsController20240813CancelBooking",
  "bookingsController20240813ConfirmBooking",
  "bookingsController20240813CreateBooking",
  "bookingsController20240813DeclineBooking",
  "bookingsController20240813GetBooking",
  "bookingsController20240813GetBookingBySeatUid",
  "bookingsController20240813GetBookingRecordings",
  "bookingsController20240813GetBookingReferences",
  "bookingsController20240813GetBookingTranscripts",
  "bookingsController20240813GetBookings",
  "bookingsController20240813GetCalendarLinks",
  "bookingsController20240813GetVideoSessions",
  "bookingsController20240813MarkNoShow",
  "bookingsController20240813ReassignBooking",
  "bookingsController20240813ReassignBookingToUser",
  "bookingsController20240813RescheduleBooking",
  "calUnifiedCalendarsControllerGetCalendarEventDetails",
  "calUnifiedCalendarsControllerUpdateCalendarEvent",
  "calendarsControllerCheck",
  "calendarsControllerCheckIcsFeed",
  "calendarsControllerCreateIcsFeed",
  "calendarsControllerDeleteCalendarCredentials",
  "calendarsControllerGetBusyTimes",
  "calendarsControllerGetCalendars",
  "calendarsControllerRedirect",
  "calendarsControllerSave",
  "calendarsControllerSyncCredentials",
  "conferencingControllerConnect",
  "conferencingControllerDefault",
  "conferencingControllerDisconnect",
  "conferencingControllerGetDefault",
  "conferencingControllerListInstalledConferencingApps",
  "conferencingControllerRedirect",
  "conferencingControllerSave",
  "destinationCalendarsControllerUpdateDestinationCalendars",
  "eventTypeWebhooksControllerCreateEventTypeWebhook",
  "eventTypeWebhooksControllerDeleteAllEventTypeWebhooks",
  "eventTypeWebhooksControllerDeleteEventTypeWebhook",
  "eventTypeWebhooksControllerGetEventTypeWebhook",
  "eventTypeWebhooksControllerGetEventTypeWebhooks",
  "eventTypeWebhooksControllerUpdateEventTypeWebhook",
  "eventTypesController20240614CreateEventType",
  "eventTypesController20240614DeleteEventType",
  "eventTypesController20240614GetEventTypeById",
  "eventTypesController20240614GetEventTypes",
  "eventTypesController20240614UpdateEventType",
  "eventTypesPrivateLinksControllerCreatePrivateLink",
  "eventTypesPrivateLinksControllerDeletePrivateLink",
  "eventTypesPrivateLinksControllerGetPrivateLinks",
  "eventTypesPrivateLinksControllerUpdatePrivateLink",
  "meControllerGetMe",
  "meControllerUpdateMe",
  "oAuth2ControllerGetClient",
  "oAuth2ControllerToken",
  "oAuthClientUsersControllerCreateUser",
  "oAuthClientUsersControllerDeleteUser",
  "oAuthClientUsersControllerForceRefresh",
  "oAuthClientUsersControllerGetManagedUsers",
  "oAuthClientUsersControllerGetUserById",
  "oAuthClientUsersControllerUpdateUser",
  "oAuthClientWebhooksControllerCreateOAuthClientWebhook",
  "oAuthClientWebhooksControllerDeleteAllOAuthClientWebhooks",
  "oAuthClientWebhooksControllerDeleteOAuthClientWebhook",
  "oAuthClientWebhooksControllerGetOAuthClientWebhook",
  "oAuthClientWebhooksControllerGetOAuthClientWebhooks",
  "oAuthClientWebhooksControllerUpdateOAuthClientWebhook",
  "oAuthClientsControllerCreateOAuthClient",
  "oAuthClientsControllerDeleteOAuthClient",
  "oAuthClientsControllerGetOAuthClientById",
  "oAuthClientsControllerGetOAuthClients",
  "oAuthClientsControllerUpdateOAuthClient",
  "oAuthFlowControllerRefreshTokens",
  "orgTeamsVerifiedResourcesControllerGetVerifiedEmailById",
  "orgTeamsVerifiedResourcesControllerGetVerifiedEmails",
  "orgTeamsVerifiedResourcesControllerGetVerifiedPhoneById",
  "orgTeamsVerifiedResourcesControllerGetVerifiedPhoneNumbers",
  "orgTeamsVerifiedResourcesControllerRequestEmailVerificationCode",
  "orgTeamsVerifiedResourcesControllerRequestPhoneVerificationCode",
  "orgTeamsVerifiedResourcesControllerVerifyEmail",
  "orgTeamsVerifiedResourcesControllerVerifyPhoneNumber",
  "organizationTeamWorkflowsControllerCreateEventTypeWorkflow",
  "organizationTeamWorkflowsControllerCreateFormWorkflow",
  "organizationTeamWorkflowsControllerDeleteRoutingFormWorkflow",
  "organizationTeamWorkflowsControllerDeleteWorkflow",
  "organizationTeamWorkflowsControllerGetRoutingFormWorkflowById",
  "organizationTeamWorkflowsControllerGetRoutingFormWorkflows",
  "organizationTeamWorkflowsControllerGetWorkflowById",
  "organizationTeamWorkflowsControllerGetWorkflows",
  "organizationTeamWorkflowsControllerUpdateRoutingFormWorkflow",
  "organizationTeamWorkflowsControllerUpdateWorkflow",
  "organizationsAttributesControllerCreateOrganizationAttribute",
  "organizationsAttributesControllerDeleteOrganizationAttribute",
  "organizationsAttributesControllerGetOrganizationAttribute",
  "organizationsAttributesControllerGetOrganizationAttributes",
  "organizationsAttributesControllerUpdateOrganizationAttribute",
  "organizationsAttributesOptionsControllerAssignOrganizationAttributeOptionToUser",
  "organizationsAttributesOptionsControllerCreateOrganizationAttributeOption",
  "organizationsAttributesOptionsControllerDeleteOrganizationAttributeOption",
  "organizationsAttributesOptionsControllerGetOrganizationAttributeAssignedOptions",
  "organizationsAttributesOptionsControllerGetOrganizationAttributeAssignedOptionsBySlug",
  "organizationsAttributesOptionsControllerGetOrganizationAttributeOptions",
  "organizationsAttributesOptionsControllerGetOrganizationAttributeOptionsForUser",
  "organizationsAttributesOptionsControllerUnassignOrganizationAttributeOptionFromUser",
  "organizationsAttributesOptionsControllerUpdateOrganizationAttributeOption",
  "organizationsBookingsControllerGetAllOrgTeamBookings",
  "organizationsConferencingControllerConnectTeamApp",
  "organizationsConferencingControllerDisconnectTeamApp",
  "organizationsConferencingControllerGetTeamDefaultApp",
  "organizationsConferencingControllerGetTeamOAuthUrl",
  "organizationsConferencingControllerListTeamConferencingApps",
  "organizationsConferencingControllerSaveTeamOauthCredentials",
  "organizationsConferencingControllerSetTeamDefaultApp",
  "organizationsDelegationCredentialControllerCreateDelegationCredential",
  "organizationsDelegationCredentialControllerUpdateDelegationCredential",
  "organizationsEventTypesControllerCreatePhoneCall",
  "organizationsEventTypesControllerCreateTeamEventType",
  "organizationsEventTypesControllerDeleteTeamEventType",
  "organizationsEventTypesControllerGetTeamEventType",
  "organizationsEventTypesControllerGetTeamEventTypes",
  "organizationsEventTypesControllerGetTeamsEventTypes",
  "organizationsEventTypesControllerUpdateTeamEventType",
  "organizationsEventTypesPrivateLinksControllerCreatePrivateLink",
  "organizationsEventTypesPrivateLinksControllerDeletePrivateLink",
  "organizationsEventTypesPrivateLinksControllerGetPrivateLinks",
  "organizationsEventTypesPrivateLinksControllerUpdatePrivateLink",
  "organizationsMembershipsControllerCreateMembership",
  "organizationsMembershipsControllerDeleteMembership",
  "organizationsMembershipsControllerGetAllMemberships",
  "organizationsMembershipsControllerGetOrgMembership",
  "organizationsMembershipsControllerUpdateMembership",
  "organizationsOrganizationsControllerCreateOrganization",
  "organizationsOrganizationsControllerDeleteOrganization",
  "organizationsOrganizationsControllerGetOrganization",
  "organizationsOrganizationsControllerGetOrganizations",
  "organizationsOrganizationsControllerUpdateOrganization",
  "organizationsRolesControllerCreateRole",
  "organizationsRolesControllerDeleteRole",
  "organizationsRolesControllerGetAllRoles",
  "organizationsRolesControllerGetRole",
  "organizationsRolesControllerUpdateRole",
  "organizationsRolesPermissionsControllerAddPermissions",
  "organizationsRolesPermissionsControllerListPermissions",
  "organizationsRolesPermissionsControllerRemovePermission",
  "organizationsRolesPermissionsControllerRemovePermissions",
  "organizationsRolesPermissionsControllerSetPermissions",
  "organizationsRoutingFormsControllerGetOrganizationRoutingForms",
  "organizationsRoutingFormsResponsesControllerCreateRoutingFormResponse",
  "organizationsRoutingFormsResponsesControllerGetRoutingFormResponses",
  "organizationsRoutingFormsResponsesControllerUpdateRoutingFormResponse",
  "organizationsSchedulesControllerCreateUserSchedule",
  "organizationsSchedulesControllerDeleteUserSchedule",
  "organizationsSchedulesControllerGetOrganizationSchedules",
  "organizationsSchedulesControllerGetUserSchedule",
  "organizationsSchedulesControllerGetUserSchedules",
  "organizationsSchedulesControllerUpdateUserSchedule",
  "organizationsStripeControllerCheckTeamStripeConnection",
  "organizationsStripeControllerGetTeamStripeConnectUrl",
  "organizationsStripeControllerSave",
  "organizationsTeamsBookingsControllerGetAllOrgTeamBookings",
  "organizationsTeamsBookingsControllerGetBookingReferences",
  "organizationsTeamsControllerCreateTeam",
  "organizationsTeamsControllerDeleteTeam",
  "organizationsTeamsControllerGetAllTeams",
  "organizationsTeamsControllerGetMyTeams",
  "organizationsTeamsControllerGetTeam",
  "organizationsTeamsControllerUpdateTeam",
  "organizationsTeamsInviteControllerCreateInvite",
  "organizationsTeamsMembershipsControllerCreateOrgTeamMembership",
  "organizationsTeamsMembershipsControllerDeleteOrgTeamMembership",
  "organizationsTeamsMembershipsControllerGetAllOrgTeamMemberships",
  "organizationsTeamsMembershipsControllerGetOrgTeamMembership",
  "organizationsTeamsMembershipsControllerUpdateOrgTeamMembership",
  "organizationsTeamsRolesControllerCreateRole",
  "organizationsTeamsRolesControllerDeleteRole",
  "organizationsTeamsRolesControllerGetAllRoles",
  "organizationsTeamsRolesControllerGetRole",
  "organizationsTeamsRolesControllerUpdateRole",
  "organizationsTeamsRolesPermissionsControllerAddPermissions",
  "organizationsTeamsRolesPermissionsControllerListPermissions",
  "organizationsTeamsRolesPermissionsControllerRemovePermission",
  "organizationsTeamsRolesPermissionsControllerRemovePermissions",
  "organizationsTeamsRolesPermissionsControllerSetPermissions",
  "organizationsTeamsRoutingFormsControllerGetTeamRoutingForms",
  "organizationsTeamsRoutingFormsResponsesControllerCreateRoutingFormResponse",
  "organizationsTeamsRoutingFormsResponsesControllerGetRoutingFormResponses",
  "organizationsTeamsRoutingFormsResponsesControllerUpdateRoutingFormResponse",
  "organizationsTeamsSchedulesControllerGetTeamSchedules",
  "organizationsTeamsSchedulesControllerGetUserSchedules",
  "organizationsUsersBookingsControllerGetOrganizationUserBookings",
  "organizationsUsersControllerCreateOrganizationUser",
  "organizationsUsersControllerDeleteOrganizationUser",
  "organizationsUsersControllerGetOrganizationsUsers",
  "organizationsUsersControllerUpdateOrganizationUser",
  "organizationsUsersOooControllerCreateOrganizationUserOoo",
  "organizationsUsersOooControllerDeleteOrganizationUserOoo",
  "organizationsUsersOooControllerGetOrganizationUserOoo",
  "organizationsUsersOooControllerGetOrganizationUsersOoo",
  "organizationsUsersOooControllerUpdateOrganizationUserOoo",
  "organizationsWebhooksControllerCreateOrganizationWebhook",
  "organizationsWebhooksControllerDeleteWebhook",
  "organizationsWebhooksControllerGetAllOrganizationWebhooks",
  "organizationsWebhooksControllerGetOrganizationWebhook",
  "organizationsWebhooksControllerUpdateOrgWebhook",
  "routingFormsControllerCalculateSlotsBasedOnRoutingFormResponse",
  "schedulesController20240611CreateSchedule",
  "schedulesController20240611DeleteSchedule",
  "schedulesController20240611GetDefaultSchedule",
  "schedulesController20240611GetSchedule",
  "schedulesController20240611GetSchedules",
  "schedulesController20240611UpdateSchedule",
  "selectedCalendarsControllerAddSelectedCalendar",
  "selectedCalendarsControllerDeleteSelectedCalendar",
  "slotsController20240904DeleteReservedSlot",
  "slotsController20240904GetAvailableSlots",
  "slotsController20240904GetReservedSlot",
  "slotsController20240904ReserveSlot",
  "slotsController20240904UpdateReservedSlot",
  "stripeControllerCheck",
  "stripeControllerRedirect",
  "stripeControllerSave",
  "teamsBookingsControllerGetAllTeamBookings",
  "teamsControllerCreateTeam",
  "teamsControllerDeleteTeam",
  "teamsControllerGetTeam",
  "teamsControllerGetTeams",
  "teamsControllerUpdateTeam",
  "teamsEventTypesControllerCreatePhoneCall",
  "teamsEventTypesControllerCreateTeamEventType",
  "teamsEventTypesControllerDeleteTeamEventType",
  "teamsEventTypesControllerGetTeamEventType",
  "teamsEventTypesControllerGetTeamEventTypes",
  "teamsEventTypesControllerUpdateTeamEventType",
  "teamsEventTypesWebhooksControllerCreateTeamEventTypeWebhook",
  "teamsEventTypesWebhooksControllerDeleteAllTeamEventTypeWebhooks",
  "teamsEventTypesWebhooksControllerDeleteTeamEventTypeWebhook",
  "teamsEventTypesWebhooksControllerGetTeamEventTypeWebhook",
  "teamsEventTypesWebhooksControllerGetTeamEventTypeWebhooks",
  "teamsEventTypesWebhooksControllerUpdateTeamEventTypeWebhook",
  "teamsInviteControllerCreateInvite",
  "teamsMembershipsControllerCreateTeamMembership",
  "teamsMembershipsControllerDeleteTeamMembership",
  "teamsMembershipsControllerGetTeamMembership",
  "teamsMembershipsControllerGetTeamMemberships",
  "teamsMembershipsControllerUpdateTeamMembership",
  "teamsSchedulesControllerGetTeamSchedules",
  "teamsVerifiedResourcesControllerGetVerifiedEmailById",
  "teamsVerifiedResourcesControllerGetVerifiedEmails",
  "teamsVerifiedResourcesControllerGetVerifiedPhoneById",
  "teamsVerifiedResourcesControllerGetVerifiedPhoneNumbers",
  "teamsVerifiedResourcesControllerRequestEmailVerificationCode",
  "teamsVerifiedResourcesControllerRequestPhoneVerificationCode",
  "teamsVerifiedResourcesControllerVerifyEmail",
  "teamsVerifiedResourcesControllerVerifyPhoneNumber",
  "userVerifiedResourcesControllerGetVerifiedEmailById",
  "userVerifiedResourcesControllerGetVerifiedEmails",
  "userVerifiedResourcesControllerGetVerifiedPhoneById",
  "userVerifiedResourcesControllerGetVerifiedPhoneNumbers",
  "userVerifiedResourcesControllerRequestEmailVerificationCode",
  "userVerifiedResourcesControllerRequestPhoneVerificationCode",
  "userVerifiedResourcesControllerVerifyEmail",
  "userVerifiedResourcesControllerVerifyPhoneNumber",
  "webhooksControllerCreateWebhook",
  "webhooksControllerDeleteWebhook",
  "webhooksControllerGetWebhook",
  "webhooksControllerGetWebhooks",
  "webhooksControllerUpdateWebhook",
]
`;

exports[`SDK ↔ CLI Coverage Audit > should match the snapshot of unused SDK functions (available but not used by CLI) 1`] = `
[
  "calUnifiedCalendarsControllerGetCalendarEventDetails",
  "calUnifiedCalendarsControllerUpdateCalendarEvent",
  "conferencingControllerConnect",
  "conferencingControllerRedirect",
  "conferencingControllerSave",
  "oAuthClientUsersControllerCreateUser",
  "oAuthClientUsersControllerDeleteUser",
  "oAuthClientUsersControllerForceRefresh",
  "oAuthClientUsersControllerGetManagedUsers",
  "oAuthClientUsersControllerGetUserById",
  "oAuthClientUsersControllerUpdateUser",
  "oAuthClientWebhooksControllerCreateOAuthClientWebhook",
  "oAuthClientWebhooksControllerDeleteAllOAuthClientWebhooks",
  "oAuthClientWebhooksControllerDeleteOAuthClientWebhook",
  "oAuthClientWebhooksControllerGetOAuthClientWebhook",
  "oAuthClientWebhooksControllerGetOAuthClientWebhooks",
  "oAuthClientWebhooksControllerUpdateOAuthClientWebhook",
  "oAuthClientsControllerCreateOAuthClient",
  "oAuthClientsControllerDeleteOAuthClient",
  "oAuthClientsControllerGetOAuthClientById",
  "oAuthClientsControllerGetOAuthClients",
  "oAuthClientsControllerUpdateOAuthClient",
  "oAuthFlowControllerRefreshTokens",
  "orgTeamsVerifiedResourcesControllerRequestEmailVerificationCode",
  "orgTeamsVerifiedResourcesControllerRequestPhoneVerificationCode",
  "orgTeamsVerifiedResourcesControllerVerifyEmail",
  "orgTeamsVerifiedResourcesControllerVerifyPhoneNumber",
  "organizationsConferencingControllerGetTeamDefaultApp",
  "organizationsConferencingControllerSaveTeamOauthCredentials",
  "organizationsEventTypesControllerCreatePhoneCall",
  "organizationsEventTypesControllerCreateTeamEventType",
  "organizationsEventTypesControllerDeleteTeamEventType",
  "organizationsEventTypesControllerGetTeamEventType",
  "organizationsEventTypesControllerGetTeamEventTypes",
  "organizationsEventTypesControllerUpdateTeamEventType",
  "organizationsRolesPermissionsControllerRemovePermission",
  "organizationsTeamsBookingsControllerGetAllOrgTeamBookings",
  "organizationsTeamsControllerCreateTeam",
  "organizationsTeamsControllerDeleteTeam",
  "organizationsTeamsControllerGetAllTeams",
  "organizationsTeamsControllerGetTeam",
  "organizationsTeamsControllerUpdateTeam",
  "organizationsTeamsInviteControllerCreateInvite",
  "organizationsTeamsMembershipsControllerCreateOrgTeamMembership",
  "organizationsTeamsMembershipsControllerDeleteOrgTeamMembership",
  "organizationsTeamsMembershipsControllerGetAllOrgTeamMemberships",
  "organizationsTeamsMembershipsControllerGetOrgTeamMembership",
  "organizationsTeamsMembershipsControllerUpdateOrgTeamMembership",
  "organizationsTeamsRolesPermissionsControllerRemovePermission",
  "teamsEventTypesControllerCreatePhoneCall",
  "teamsSchedulesControllerGetTeamSchedules",
  "teamsVerifiedResourcesControllerRequestEmailVerificationCode",
  "teamsVerifiedResourcesControllerRequestPhoneVerificationCode",
  "teamsVerifiedResourcesControllerVerifyEmail",
  "teamsVerifiedResourcesControllerVerifyPhoneNumber",
  "userVerifiedResourcesControllerRequestEmailVerificationCode",
  "userVerifiedResourcesControllerRequestPhoneVerificationCode",
  "userVerifiedResourcesControllerVerifyEmail",
  "userVerifiedResourcesControllerVerifyPhoneNumber",
]
`;

exports[`SDK ↔ CLI Coverage Audit > should track coverage metrics 1`] = `
{
  "coveragePercent": 79,
  "importedByCliCount": 214,
  "totalSdkFunctions": 272,
  "unusedCount": 59,
}
`;
